[tool.poetry]
name = "drone-copilot"
version = "0.0.0+see_src_main.py"
description = "A cross-platform application to fly a drone using different autopilot algorithms"
authors = ["Yeicor <4929005+Yeicor@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# Core
python = ">=3.9,<3.12"

# Kivy & Widgets
Kivy = { version = "^2.1.0", extras = ["base", "full"] }
joystick = { git = "https://github.com/Yeicor/joystick", rev = "master" }
kivy3 = { git = "https://github.com/KeyWeeUsr/kivy3", rev = "master" }

# Drone management
tellopy = { git = "https://github.com/hanyazou/TelloPy", rev = "develop-0.7.0" }
# TODO: dronekit??

# AI
# - OpenCV: computer vision algorithms
opencv-python = "^4.7.0.72"
# - Tensorflow: machine learning platform (either tflite or tensorflow(-cpu/-gpu)? should be installed)
tflite-runtime = { platform = 'linux', version = "^2.11.0" }
tensorflow = [# TODO: Remove python version requirement when it is possible
    { platform = 'linux', python = "<3.11", version = "^2.11.0" }, # This does not seem to be using GPU, but is faster than tflite?!?
    { markers = 'sys_platform != "linux"', python = "<3.11", version = "<2.11.0" }, # Last version that works on Windows-native with GPU
]

# Network
requests = "^2.28.2"

# Misc
plyer = "^2.1.0" # Cross-platform utilities
ffpyplayer = "^4.4.0" # Video player
Pillow = "^9.4.0" # Image processing
camera4kivy = "^0.3.0" # Webcam support

[tool.poetry.group.build-mobile] # poetry install --with build-mobile --without main
optional = true
[tool.poetry.group.build-mobile.dependencies]
Cython = "^0.29.33"
buildozer = "^1.5.0"

[tool.poetry.group.build-desktop] # poetry install --with build-desktop
optional = true
[tool.poetry.group.build-desktop.dependencies]
pyinstaller = "^5.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
